コーディング修正

--- a/css/_common.scss
+++ b/css/_common.scss
@@ -44,6 +44,7 @@ $colors: (
 	'lightblue': #dadfe0,
 	'red': #bd1b1b,
 	'gray': #ececec,
+	'palegray': #f4f4f4,
 	'lightgray': #f8f8f7,
 	'darkgray': #bdbdbd,
 );
@@ -56,6 +57,7 @@ $lightgreen: #d1dbd8;
 $lightblue: #dadfe0;
 $red: #bd1b1b;
 $gray: #ececec;
+$palegray: #f4f4f4;
 $lightgray: #f8f8f7;
 $darkgray: #bdbdbd;
 
