--- a/css/module.scss
+++ b/css/module.scss
@@ -246,6 +246,11 @@ $hex in $colors {
       right: 30px;
     }
   }
+  &.-black {
+    &::before {
+      background: $black;
+    }
+  }
 }
 
 /*	Object
